added missing tooltips.
Mon Dec 22 00:49:05 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstwaveview.c: added missing tooltips.

        * tests/Makefile.am: create the testplugin via noinst_LTLIBRARIES,
        to not clutter a public installation directory.

svn path=/trunk/; revision=1713

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -76,8 +76,7 @@ BSEPGEN = $(top_builddir)/sfi/bse-plugin-generator
 testplugin_la_SOURCES = testplugin.cc
 testplugin_la_LDFLAGS = -module -avoid-version
 testplugin_la_LIBADD  = $(BSE_LIBS) -lm
-plugindir = $(bseplugindir)/nirvana
-plugin_LTLIBRARIES = testplugin.la
+noinst_LTLIBRARIES = testplugin.la
 
 $(srcdir)/testplugin.cc: testplugin.gen-idl.h
 
