comment fixups. added SMF meta event types. renamed event tick_stamp field
Thu Dec 25 07:25:51 2003  Tim Janik  <timj@gtk.org>

        * bsemidievent.[hc]: comment fixups. added SMF meta event types.
        renamed event tick_stamp field to delta_time. added global macros
        to check for channel-voice, system-common and system-realtime
        messages.
        (bse_midi_signal_default): adjusted #7 (volume) default and added
        defaults for #10 (Panorama) and #11 (Expression).
        (boxed_copy_midi_event): fix bogus allocation and copying.
        (bse_midi_free_event): properly free the new event types.

        * bsemididecoder.[hc]: lots of fixes, added SMF delta time and meta
        event parsing. turned the decoder into a proper state machine.

        * bsessequencer.c:
        * bsemidireceiver.cc: cosmetic fixups, adapt to renames.

        * bseproject.proc: added import-midi-file() procedure.

        * bsemidievent.h:
        * bserecords.idl: fixed midi signal type names, added some.

svn path=/trunk/; revision=1733

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -58,7 +58,7 @@ bse_public_h_sources = $(strip \
 	bseutils.h		bsemidivoice.h		bsewave.h			bsewaveosc.h \
 	bsecsynth.h		bsewaverepo.h		bseladspamodule.h		bsepcmwriter.h \
 	bsecompat.h		bseundostack.h		bsemidiinput.h			bsemididecoder.h \
-	bsenote.h		\
+	bsenote.h		bsemidifile.h		\
 	bsecxxvalue.h		bsecxxutils.h		bsecxxbase.h			bsecxxclosure.h \
 	bsecxxarg.h		bsecxxmodule.h		bsecxxplugin.h			bsecxxsmart.h \
 )
@@ -85,7 +85,7 @@ bse_c_sources = $(strip \
 	bseutils.c		bsemidivoice.c		bsewave.c			bsewaveosc.c \
 	bsecsynth.c		bsewaverepo.c		bseladspamodule.c		bsepcmwriter.c \
 	bsecompat.c		bseundostack.c		bsemidiinput.c			bsemididecoder.c \
-	bsenote.c		\
+	bsenote.c		bsemidifile.c		\
 	bsecxxvalue.cc		bsecxxutils.cc		bsecxxbase.cc			bsecxxclosure.cc \
 	bsecxxarg.cc		bsecxxmodule.cc		bsecxxplugin.cc			\
 )
