--- a/Makefile.am
+++ b/Makefile.am
@@ -30,4 +30,5 @@ EXTRA_DIST += $(strip		\
 	intltool-extract.in     \
 	intltool-merge.in       \
 	intltool-update.in	\
+	intltool-modules/XML/Parser/Style/OrigTree.pm \
 )
