--- a/configure.in
+++ b/configure.in
@@ -153,6 +153,8 @@ AC_DEFUN(AC_SFI_REQUIREMENTS,
     AC_SUBST(SFI_CFLAGS)
     AC_SUBST(SFI_LIBS)
 
+    AC_CHECK_FUNCS(getpwnam_r getpwnam)
+
     dnl --- SFI directories ---
     sfidlstdincdir=${includedir}
     AC_SUBST(sfidlstdincdir)
@@ -383,7 +385,7 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
     bse_have_pcmdev=
 	
     dnl OSS-Lite driver check
-    AC_CHECK_HEADER(sys/soundcard.h, have_oss_header=yes, have_oss_header=no)
+    AC_CHECK_HEADERS(sys/soundcard.h soundcard.h, have_oss_header=yes, have_oss_header=no)
     AC_ARG_ENABLE(osspcm,
 	[  --enable-osspcm=DEVICE  force DEVICE as OSS PCM device name],
 	[AC_MSG_WARN([Ignoring detection of PCM device])],
