added some test translations.
Mon Jan  5 01:21:18 2004  Tim Janik  <timj@gtk.org>

        * de.po: added some test translations.

svn path=/trunk/; revision=1778

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -43,7 +43,9 @@ beast-gtk/gxk/gxkparam-spinner.c
 beast-gtk/gxk/gxkparam-toggle.c
 beast-gtk/gxk/gxksimplelabel.c
 bse/bseamplifier.idl
+bse/bseautodoc.c
 bse/bsebiquadfilter.c
+bse/bsestandardosc.c
 bse/bsesuper.c
 data/beast.desktop.in
 data/bse.keys.in
