Started sfidl documentation.
Sat Jan 17 03:05:49 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* docs/sfidl.texi: Started sfidl documentation.

	* docs/generated/Makefile.am: Build sfidl.markup and sfidl.html.

	* docs/Makefile.am: Include sfidl.texi.

svn path=/trunk/; revision=1814

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -4,7 +4,7 @@ texi_docs = $(strip						\
 	WRITING.3.texi			beast-index.texi	\
 	quickstart.texi			plugin-devel.texi	\
 	release-notes.texi		faq.texi		\
-	bse-plugin-generator.1.texi				\
+	bse-plugin-generator.1.texi	sfidl.texi		\
 )
 texi_images = $(strip		\
 	module-voices.png	\
