refactored and generalized scrolling, h/v panel layout and drawing logic
Fri Jan 30 23:56:11 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkscrollcanvas.[hc]: refactored and generalized
        scrolling, h/v panel layout and drawing logic from bstpianoroll
        into a new widget. GxkScrollCanvas supports panels on all four
        sides of a canvas, and dragging in each window.

        * beast-gtk/bstpartdialog.c: fixed callers.

        * beast-gtk/bstpianoroll.[hc]: derive from GxkScrollCanvas,
        adapted to use GxkScrollCanvas code, threw out every
        functionality that GxkScrollCanvas now implements.

        * beast-gtk/bstpianorollctrl.c: fixed callers.

        * beast-gtk/bsteventroll.c: disable tick<->pixel transformation for
        the hadjustment, so it always contains pixel values.

        * beast-gtk/gxk/gxktest.c: added scroll_canvas_test().

svn path=/trunk/; revision=1937

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -17,21 +17,21 @@ DEFS += $(strip \
 noinst_LIBRARIES = libgxk.a
 
 gxk_headers = $(strip \
-	gxkled.h	gxkcanvas.h	gxkdialog.h	gxkauxwidgets.h \
-	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxklistwrapper.h \
-	gxkrackeditor.h	gxkutils.h	gxkpolygon.h	gxkcellrendererpopup.h \
-	gxkgadget.h	gxkaction.h	gxkglobals.h	gxkgadgetfactory.h \
-	glewidgets.h	gxkracktable.h	gxkrackitem.h	gxksimplelabel.h \
-	gxkparam.h					gxklogadjustment.h \
+	gxkled.h	gxkcanvas.h		gxkdialog.h	gxkauxwidgets.h \
+	gxkstatusbar.h	gxkstock.h		gxktexttools.h	gxklistwrapper.h \
+	gxkrackeditor.h	gxkutils.h		gxkpolygon.h	gxkcellrendererpopup.h \
+	gxkgadget.h	gxkaction.h		gxkglobals.h	gxkgadgetfactory.h \
+	glewidgets.h	gxkracktable.h		gxkrackitem.h	gxksimplelabel.h \
+	gxkparam.h	gxkscrollcanvas.h			gxklogadjustment.h \
 	gxk.h \
 )
 gxk_c_sources = $(strip \
-	gxkled.c	gxkcanvas.c	gxkdialog.c	gxkauxwidgets.c \
-	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxklistwrapper.c \
-	gxkrackeditor.c	gxkutils.c	gxkpolygon.c	gxkcellrendererpopup.c \
-	gxkgadget.c	gxkaction.c	gxkglobals.c	gxkgadgetfactory.c \
-	glewidgets.c	gxkracktable.c	gxkrackitem.c	gxksimplelabel.c \
-	gxkparam.c					gxklogadjustment.c \
+	gxkled.c	gxkcanvas.c		gxkdialog.c	gxkauxwidgets.c \
+	gxkstatusbar.c	gxkstock.c		gxktexttools.c	gxklistwrapper.c \
+	gxkrackeditor.c	gxkutils.c		gxkpolygon.c	gxkcellrendererpopup.c \
+	gxkgadget.c	gxkaction.c		gxkglobals.c	gxkgadgetfactory.c \
+	glewidgets.c	gxkracktable.c		gxkrackitem.c	gxksimplelabel.c \
+	gxkparam.c	gxkscrollcanvas.c			gxklogadjustment.c \
 )
 gxk_extra_sources = $(strip \
 	gxkparam-entry.c	gxkparam-label.c	\
