skin configuration handling, implemented skinrc with versioning. skinrc
Sun Feb  1 15:46:45 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstskinconfig.[hc]: skin configuration handling,
	implemented skinrc with versioning. skinrc filename can be
	overridden via BEAST_SKINRC environment variable.

	* beast-gtk/bstparam-color-spinner.c: provide input widget
	to edit colors.

	* beast-gtk/bstauxdialogs.[hc]: provide auxillary colorselection
	dialog. patched up GtkColorSelection to have activate-default
	behaviour for Return and KP_Enter.

	* beast-gtk/bstdefs.h: moved beast rcfile from ~/.beastrc to
	~/.beast/beastrc.

	* beast-gtk/bstfiledialog.[hc]: implement simple file selection case.

	* beast-gtk/bstgconfig.[hc]: started internal versioning for beastrc.
	(bst_rc_dump): ensure path-to-rc-file exists (~/.beast).

	* beast-gtk/bstmain.c: load skinrc, only save beastrc at program
	end if it was saved from a different beast version. save
	.bserc unconditionally.

	* beast-gtk/bstparam-searchpath.c: grab focus o nbutton clicks.
	implemented "filename" pspec option.

	* beast-gtk/bstpianoroll.[hc]: made h/v grid colors and background
	configurable through BstSkinConfig, based on GxkScrollCanvasClass
	skin support. draw h/v grid in multiple passes to have lines
	properly overlapping.

	* beast-gtk/bstpreferences.[hc]: added editing facilities for
	skin settings.

	* beast-gtk/bstrecords.idl: some cleanups.
	added SkinConfig - skin configuration record.

	* beast-gtk/gxk/gxkimagecache.[hc]: implement caching of
	pixmaps, rendered from image file names.

	* beast-gtk/gxk/gxkparam.[hc]: support explicit page-stepping
	specification for linear adjustments.

	* beast-gtk/gxk/gxkscrollcanvas.[hc]: implemented background
	rendering based on pixmaps. added skin-change support
	by means of rerendering background pixmap and recreating
	color GCs for all currently realized scroll-canvas widgets.
	optimized redrawing of L-shaped regions during scrolling.

	* beast-gtk/gxk/gxkutils.

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -44,7 +44,7 @@ beast_headers = $(strip \
 	bstsnetrouter.h		bstsplash.h	bsttrackview.h		bstsupershell.h	\
 	bstusermessage.h	bstdial.h	bsttracksynthdialog.h	bstwaveeditor.h	\
 				bstwaveview.h				bstxkb.h	\
-	bstzoomedwindow.h			bsttrackrollctrl.h	bstxframe.h	\
+	bstzoomedwindow.h	bstskinconfig.h	bsttrackrollctrl.h	bstxframe.h	\
 				bstrackview.h	bsttreestores.h		bstutils.h	\
 	bstauxdialogs.h		bstsegment.h	bsteventrollctrl.h	bsteventroll.h	\
 	bstmarshal.h bstdefs.h \
@@ -63,18 +63,18 @@ beast_sources = $(strip \
 	bstsnetrouter.c		bstsplash.c	bsttrackview.c		bstsupershell.c	\
 	bstusermessage.c	bstdial.c	bsttracksynthdialog.c	bstwaveeditor.c	\
 				bstwaveview.c				bstxkb.c	\
-	bstzoomedwindow.c			bsttrackrollctrl.c	bstxframe.c	\
+	bstzoomedwindow.c	bstskinconfig.c	bsttrackrollctrl.c	bstxframe.c	\
 				bstrackview.c	bsttreestores.c		bstutils.c	\
 	bstauxdialogs.c		bstsegment.c	bsteventrollctrl.c	bsteventroll.c	\
 	$(PROFILE_SOURCE) \
 )
 # BEAST sources that get included (don't have own .lo rules)
-beast_extra_sources = $(strip \
-	bstparam-choice.c	bstparam-note-sequence.c	\
-	bstparam-note-spinner.c	bstparam-proxy.c		\
-	bstparam-scale.c	bstparam-searchpath.c		\
-	bstparam-time.c		\
-	bstrackeditor-covers.c	bstmarshal.c \
+beast_extra_sources = $(strip 						\
+	bstparam-choice.c		bstparam-note-sequence.c	\
+	bstparam-note-spinner.c		bstparam-proxy.c		\
+	bstparam-color-spinner.c	bstparam-scale.c		\
+	bstparam-searchpath.c		bstparam-time.c			\
+	bstrackeditor-covers.c		bstmarshal.c 			\
 )
 beast_extra_files = $(strip \
 	bstmarshal.list		stamp-bstenum_arrays.c	\
