provide action list for available skins.
Sun Feb  1 18:38:15 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.[hc]: provide action list for available skins.

        * beast-gtk/dialogs/gadgets-beast.xml: put skin actions
        under View/Skins.

        * beast-gtk/bstrecords.idl: added some tooltips, support skin name.

        * beast-gtk/bstmain.c: added --skinrc=... option to set skinrc file
        name. added "demo" and "skins" directory print-out.

        * beast-gtk/bstskinconfig.[hc]: support setting skin file names
        via command line options, got rid of BEAST_SKINRC env hack.

        * configure.in: added skins/ and skins/images/ directories,
        define isntallation path for skins.

        * beast-gtk/bstutils.[hc]: renamed and rewrote bst_file_scan_song_name()
        into bst_file_scan_find_key() to be used with files other than songs.

        * data/Makefile.am: generate BST_PATH_SKINS config setting.

        * library/skins/: new directory for skins shipped with beast.
        * library/skins/images: new directory holding images needed by skins.

        * library/skins/white.skin: plain white skin, coming close to the
        pianor roll look from 0.5.6.

        * library/skins/images/moonpaper.png:
        * library/skins/moonpaper.skin: added Moon Paper skin.

svn path=/trunk/; revision=1943

--- a/configure.in
+++ b/configure.in
@@ -377,6 +377,8 @@ AC_DEFUN(AC_BEAST_REQUIREMENTS,
     AC_SUBST(beastdocsdir)
     beastimagesdir=$beastbasedir/v$BSE_VERSION/images
     AC_SUBST(beastimagesdir)
+    beastskinsdir=$beastbasedir/v$BSE_VERSION/skins
+    AC_SUBST(beastskinsdir)
 ])
 AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 [
@@ -573,6 +575,8 @@ library/effects/Makefile
 library/instruments/Makefile
 library/scripts/Makefile
 library/demo/Makefile
+library/skins/Makefile
+library/skins/images/Makefile
 tests/Makefile
 data/Makefile
 data/sfi.pc
