applied fixes suggested by Sam Hocevar <sam@zoy.org>.
Wed Feb  4 00:07:12 2004  Tim Janik  <timj@gtk.org>

        * applied fixes suggested by Sam Hocevar <sam@zoy.org>.

        * bse/Makefile.am: add libsfi.la to libbse.la ldadd,
        since we use libtool-1.5 now.

        * bsw/Makefile.am: add libbse.la to libbsw.la ldadd.

svn path=/trunk/; revision=1950

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -31,7 +31,7 @@ libbse_la_LDFLAGS = $(strip \
 	-release $(LT_RELEASE) \
 	-export-dynamic \
 )
-libbse_la_LIBADD = $(BSE_LIBS) -lm
+libbse_la_LIBADD = $(top_builddir)/sfi/libsfi.la $(BSE_LIBS) -lm
 
 
 #
